Fix styling for elastic height. Tabs now stretch vertically.

--- a/css/churches.css
+++ b/css/churches.css
@@ -1,5 +1,5 @@
 #main { background: #2f2f2f url('../img/backgrounds/join.jpg') no-repeat top left; font-size: 0.85em; position: relative; }
-#main > h2 { background-position: 0 -168px; margin-bottom: 0; }
+#main > h2 { background-position: 0 -168px; }
 
 .leftcol, .rightcol { width: 46%; text-align: center; margin-top: 50px; }
 .leftcol { float: left; }
